syntax = "proto3";

package com.example.memory.ApiResponse;

option java_package = "com.example.memory.proto.ApiResponse";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ApiResponse {
  bool success = 1;
  string status_code = 2;
  string message = 3;
  google.protobuf.Any data = 4;
}