syntax = "proto3";

package com.example.memory.proto;

option java_package = "com.example.memory.proto.api";
option java_multiple_files = true;

import "enums/Roles.proto";

message CreateUserProfileRequestDTO {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string password = 6;
  string profile_image = 7;
  string cover_image = 8;
  string description = 9;
  string date_of_birth = 10;
}


message UserProfileResponseDTO {
  string userId = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string phoneNumber = 6;
  string dateOfBirth = 7;
  bool isVerified = 8;
  bool isBlocked = 9;
  string profileImage = 10;
  string coverImage = 11;
}

